<resources>
    <string name="app_name">Wisata Indra</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="profile">Profile</string>
    <string name="portal_wisata">Portal Wisata</string>
    <string name="lokasi_wisata">Lokasi Wisata</string>
    <string name="video_wisata">Video Wisata</string>
    <string name="galeri_wisata">Galeri Wisata</string>
    <string name="lain_lain">Lain Lain</string>
    <string name="keluar">Keluar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="wisata_jogja">Wisata Jogja</string>
</resources>
